# document_scanner

./: CMakeLists.txt  main.py
include/: document_scanner.hpp  image_processing.hpp
src/: document_scanner.cpp  image_processing.cpp  main.cpp
